load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "FlexBuffers",
    srcs = glob([
        "Sources/FlexBuffers/**/*.swift",
        "Sources/Common/*.swift",
    ]),
    module_name = "FlexBuffers",
    visibility = ["//visibility:public"],
)

swift_library(
    name = "swift",
    srcs = glob([
        "Sources/FlatBuffers/*.swift",
        "Sources/Common/*.swift",
    ]),
    module_name = "FlatBuffers",
    visibility = ["//visibility:public"],
)
